fix: rendering issues on iPhone

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    image-rendering: pixelated;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -5,12 +9,10 @@ body {
   align-items: center;
   background-image: url("static/background.png");
   background-repeat: repeat;
-  image-rendering: pixelated;
 }
-
-img {
+ 
+.dialog {
   position: absolute;
   top: 30%;
   display: block;
-  image-rendering: pixelated;
 }
